# opmodel

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CORE-VISUAL.md  Dockerfile  README.md  docker-compose.yml  opm-analisis-categorico-360.md  package.json  shimmering-munching-flame.md  test-parse-debug.ts  tsconfig.json  vitest.config.ts
analysis/: opm-analisis-categorico-360.md
audits/: architecture-audit-2026-04-06.md
docs/: README.md  opm-methodology.md
scripts/: build-ev-ams.ts  build-hodom-hsc-v0.ts  build-hodom-v2.ts  build-object-visual-audit.ts  build-process-control-visual-audit.ts  build-process-visual-audit.ts  capture-joint-sandbox.ts  capture-visual-audit.ts  generate-hodom.ts  test-nested-refinements.ts
services/modeling-orchestrator/: README.md  pyproject.toml
services/modeling-orchestrator/scripts/: incremental_change_bridge.ts  opl_import_bridge.ts  refine_process_bridge.ts  render_bridge.ts  wizard_generate_bridge.ts
services/modeling-orchestrator/src/modeling_orchestrator/: __init__.py  agents.py  contracts.py  core_bridge.py  graph.py  main.py  ssot.py  state.py  workers.py
services/modeling-orchestrator/tests/: test_apply_simple_preview.py  test_incremental_change.py  test_refine_process.py  test_render.py  test_wizard_and_import_contracts.py
sessions/: 2026-03-10-modeling-session-handoff.md  2026-03-10-raw-session.md  2026-03-11-data-model-session-handoff.md  2026-03-11-interactive-editor-handoff.md  2026-03-11-modeling-loop-handoff.md  2026-03-11-update-operations-handoff.md  2026-03-13-iso-audit-handoff.md  (+13 more)
(+145 files in other folders)
